# improved-sdd

./: .flake8  .gitignore  .pre-commit-config.yaml  AUTOMATION_SUMMARY.md  GITHUB_AUTOMATION.md  LICENSE  PUBLISH.md  README.md  TESTING_STRATEGY.md  TEST_COVERAGE_IMPROVEMENTS.md  TEST_IMPLEMENTATION_SUMMARY.md  USAGE.md  benchmark_performance.py  check_github_automation.py  debug_branch_download.py  debug_download.py  debug_gitlab_templates.py  ideas.md  performance_baseline.json  pyproject.toml  pytest.ini  requirements.txt  tasks.py  test_feature_branch.py  test_runner.py  validation_report.md
.copilot/chatmodes/: specMode.chatmode.md  testMode.chatmode.md
.copilot/instructions/: mcpDev.instructions.md
.copilot/prompts/: analyzeProject.prompt.md  doubleCheck.prompt.md  doubleCheckFile.prompt.md  executeTask.prompt.md
.github/: copilot-instructions.md
.github/chatmodes/: sddSpecDriven.chatmode.md  sddSpecDrivenSimple.chatmode.md  sddTesting.chatmode.md
.github/claude/chatmodes/: sddSpecDriven.chatmode.claude.md
.github/claude/prompts/: sddTaskExecution.prompt.claude.md
.github/cursor/chatmodes/: sddSpecDrivenSimple.chatmode.cursor.md
.github/cursor/prompts/: sddSpecSync.prompt.cursor.md
.github/gitlab-flow/: gitlab-flow-commit.md  gitlab-flow-pr.md  gitlab-flow-setup.md  gitlab-flow-workflow.md
.github/instructions/: sddPythonCliDev.instructions.md
.github/prompts/: sddSpecSync.prompt.md
.github/workflows/: ci-old.yml  ci.yml  codeql.yml  publish.yml  security.yml
.sdd_templates/prompts/: sddSpecSync.prompt.md  sddTaskVerification.prompt.md
.specs/cli-decomposition/: requirements.md
.specs/gitlab-flow-integration/: __DONE__  requirements.md  tasks.md
.specs/numbered-spec-files/: pattern-validation.md  replacement-patterns.md  tasks.md  template-analysis.md
.specs/preserve-manual-files/: 01_feasibility.md  02_requirements.md  03_design.md  04_tasks.md
.specs/pypi-publishing-automation/: design.md  feasibility.md  tasks.md
.specs/template-download-system/: design.md
docs/: pypi-publishing-usage.md  pypi-setup-guide.md  security-checklist.md
memory/: constitution.md  constitution_update_checklist.md
scripts/: check-task-prerequisites.ps1  common.ps1  create-new-feature.ps1  get-feature-paths.ps1  setup-dev.py  setup-plan.ps1
sdd_templates/prompts/: sddFileVerification.prompt.md
specs/001-improved-sdd-foundation/: requirements.md
specs/__DONE__template-download-system/: design.md  feasibility.md  requirements.md
specs/__done__cli-decomposition/: design.md  feasibility.md  tasks.md
specs/cli-decomposition/: design.md  requirements.md  tasks.md
specs/gitlab-flow-integration/: design.md  feasibility.md  requirements.md  tasks.md
specs/numbered-spec-files/: design.md  feasibility.md  requirements.md  tasks.md
specs/pypi-publishing-automation/: requirements.md  tasks.md
specs/template-download-system/: design.md  feasibility.md  requirements.md  tasks.md
src/: __init__.py  improved_sdd_cli.py  utils.py
src/commands/: __init__.py  check.py  delete.py  init.py  validate_config.py
src/core/: __init__.py  ai_tool_manager.py  config.py  container.py  exceptions.py  file_manager.py  interfaces.py  models.py  user_interaction_handler.py
src/improved_sdd.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/services/: __init__.py  cache_manager.py  file_tracker.py  github_downloader.py  template_resolver.py
src/ui/: __init__.py  console.py  progress.py
templates/: sdd-config.yaml
templates/chatmodes/: sddSpecDriven.chatmode.md  sddSpecDrivenSimple.chatmode.md  sddTesting.chatmode.md
templates/gitlab-flow/: gitlab-flow-commit.md  gitlab-flow-pr.md  gitlab-flow-workflow.md
templates/instructions/: CLIPythonDev.instructions.md  CLIPythonDev.md  sddMcpServerDev.instructions.md
templates/prompts/: sddCommitWorkflow.prompt.md  sddFileVerification.prompt.md  sddProjectAnalysis.prompt.md  sddSpecSync.prompt.md  sddTaskExecution.prompt.md  sddTestAll.prompt.md  testAll.prompt.md
test-fixed-flow/: README.md
test-fixed-flow/.github/instructions/: python-cli-dev.instructions.md
test-gitlab-flow/.github/chatmodes/: sddSpecDriven.chatmode.md
test-gitlab-flow/.github/prompts/: sddTaskVerification.prompt.md
test-project-unique/.github/chatmodes/: sddSpecDriven.chatmode.md
test-project-unique/.github/gitlab-flow/: gitlab-flow-pr.md  gitlab-flow-setup.md
test-project/.github/chatmodes/: sddSpecDriven.chatmode.md
test-project/.github/gitlab-flow/: gitlab-flow-workflow.md
test-project/.github/prompts/: reevaluateSpec.prompt.md  sddProjectAnalysis.prompt.md  sddTaskExecution.prompt.md
tests/: README.md  __init__.py  conftest.py  test_numbered_spec_files.py
tests/fixtures/: sample_chatmode.md  sample_command.md  sample_instruction.md  sample_prompt.md  test_data.py
tests/integration/: test_command_integration.py  test_delete_command_integration.py  test_file_level_union_integration.py  test_github_repository_validation.py  test_simple_integration.py  test_template_union_integration.py  test_workflows.py
tests/unit/: test_cache_manager.py  test_cache_manager_service.py  test_cli_commands.py  test_configuration_system.py  test_console_manager.py  test_container.py  test_core_functions.py  test_core_layer.py  test_file_level_template_union.py  test_file_management.py  test_file_tracker_service.py  test_github_downloader.py  test_progress_tracker.py  test_template_installation_union.py  test_template_resolver.py  test_template_union.py
tools/: baseline_testing.py  bump_version.py  migration_monitor.py  test_workflow.py  validate_numbered_references.py  verify-setup.py
tools/performance_data/: checkpoint_task_0_2_completion_1757262866.json  checkpoint_test_integration_1757262285.json
tools/rollback_checkpoints/checkpoint_test_checkpoint_fixed_1757263086/: README.md
tools/rollback_checkpoints/checkpoint_test_checkpoint_fixed_1757263086/tests/: README.md
tools/rollback_checkpoints/checkpoint_test_checkpoint_fixed_1757263086/tools/: migration_rollback.py  performance_monitor.py
(+13 files in other folders)
